[gd_scene load_steps=2 format=3 uid="uid://df6o5upbnjasl"]

[ext_resource type="Script" path="res://addons/EventEditor/eventNode.gd" id="1_gufru"]

[node name="EventNode" type="GraphNode"]
offset_right = 131.0
offset_bottom = 163.0
resizable = true
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color(1, 1, 1, 1)
slot/3/left_icon = null
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color(1, 1, 1, 1)
slot/3/right_icon = null
slot/3/draw_stylebox = true
script = ExtResource("1_gufru")

[node name="nameEdit" type="LineEdit" parent="."]
layout_mode = 2
placeholder_text = "Name"

[node name="TextEdit" type="TextEdit" parent="."]
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Text"
wrap_mode = 1

[node name="addButton" type="Button" parent="."]
layout_mode = 2
text = "add button"

[node name="empty" type="Control" parent="."]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[connection signal="text_changed" from="nameEdit" to="." method="_on_name_edit_text_changed"]
[connection signal="pressed" from="addButton" to="." method="_on_add_button_pressed"]
